added ``tutorial`` notebook

--- a/notebooks/tutorial.ipynb
+++ b/notebooks/tutorial.ipynb
@@ -87,14 +87,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 64%|██████▍   | 641/1001 [05:06<02:46,  2.16it/s]"
+      "100%|██████████| 1001/1001 [07:57<00:00,  2.10it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Brier:0.19627337635662867\n",
+      "AUC:0.78125\n",
+      "P value:0.013986013986013991\n"
      ]
     }
    ],
@@ -116,7 +125,24 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting cross validation procedure to compare using facial/HPO data only with PhenoScore.\n",
+      "Finished cross validation and evaluation of model scores. Now starting LIME for the top 5 predictions to generate heatmaps and visualise phenotypic differences.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      "  0%|          | 0/5 [00:00<?, ?it/s]"
+     ]
+    }
+   ],
    "source": [
     "phenoscorer.get_lime(X, y, img_paths, n_lime=5)\n",
     "phenoscorer.gen_lime_and_results_figure(bg_image=os.path.join('../', 'phenoscore', 'sample_data','background_image.jpg'),\n",
