fixed import bug

--- a/notebooks/tutorial.ipynb
+++ b/notebooks/tutorial.ipynb
@@ -16,9 +16,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {
+    "pycharm": {
+     "is_executing": true
+    }
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-02-15 13:49:06,216 - phenopy - INFO - checking if config file exists: C:\\ProgramData\\Anaconda3\\envs\\PhenoScore\\.phenopy\n",
+      "2023-02-15 13:49:06,216 - phenopy - INFO - phenopy 0.5.2\n",
+      "2023-02-15 13:49:06,216 - phenopy - INFO - Using configuration file: C:\\ProgramData\\Anaconda3\\envs\\PhenoScore\\.phenopy\\phenopy.ini\n"
+     ]
+    }
+   ],
    "source": [
     "from phenoscore.phenoscorer import PhenoScorer\n",
     "import os"
@@ -34,8 +48,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "pycharm": {
+     "is_executing": true
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -62,8 +80,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "pycharm": {
+     "is_executing": true
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -87,23 +109,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "pycharm": {
+     "is_executing": true
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1001/1001 [07:57<00:00,  2.10it/s]\n"
+      "100%|██████████| 1001/1001 [07:45<00:00,  2.15it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Brier:0.19627337635662867\n",
-      "AUC:0.78125\n",
-      "P value:0.013986013986013991\n"
+      "Brier:0.19675187179215042\n",
+      "AUC:0.796875\n",
+      "P value:0.01698301698301699\n"
      ]
     }
    ],
@@ -124,7 +150,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "is_executing": true
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -160,7 +190,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "is_executing": true
+    }
+   },
    "outputs": [],
    "source": [
     "phenoscorer.predict_new_sample(X, y, img_paths[-1], X[-1,-1])\n",
@@ -178,7 +212,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "is_executing": true
+    }
+   },
    "outputs": [],
    "source": [
     "mode = 'hpo'\n",
@@ -208,7 +246,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "is_executing": true
+    }
+   },
    "outputs": [],
    "source": [
     "mode = 'face'\n",
