added code for subgroup analyses

--- a/notebooks/subgroup_analyses_paper.ipynb
+++ b/notebooks/subgroup_analyses_paper.ipynb
@@ -86,7 +86,7 @@
     }
    ],
    "source": [
-    "X, y, img_paths, df_data = phenoscorer.load_data_from_excel(os.path.join('\\\\\\\\umcsanfsclp01\\\\gen_archive\\\\Genetica-Projecten\\\\Facial Recognition\\\\Facial Recognition Syndromen\\\\SETBP1', 'setbp1_subgroup_analysis', 'df_data.xlsx'))\n",
+    "X, y, img_paths, df_data = phenoscorer.load_data_from_excel(os.path.join('SETBP1', 'setbp1_subgroup_analysis', 'df_data.xlsx'))\n",
     "print('Data loaded!')"
    ]
   },
@@ -321,8 +321,8 @@
     }
    ],
    "source": [
-    "paths = [os.path.join(\"\\\\\\\\umcsanfsclp01\\\\gen_archive\\\\Genetica-Projecten\\\\Facial Recognition\\\\Facial Recognition Syndromen\\\\ADNP\\\\ADNP_methylation\", 'df_data.xlsx'),\n",
-    "         os.path.join(\"\\\\\\\\umcsanfsclp01\\\\gen_archive\\\\Genetica-Projecten\\\\Facial Recognition\\\\Facial Recognition Syndromen\\\\DEAF1_AD\\\\deaf1_subgroup_analysis\", 'df_data.xlsx')  \n",
+    "paths = [os.path.join(\"ADNP_methylation\", 'df_data.xlsx'),\n",
+    "         os.path.join(\"deaf1_subgroup_analysis\", 'df_data.xlsx')  \n",
     "]\n",
     "gene_names = ['ADNP', 'DEAF1']\n",
     "\n",
